EYECANDY, detail view and filter area, scrollbars for lists, fixed onclick drawBarGraph error when filter is on true,true

--- a/Web Files/style.css
+++ b/Web Files/style.css
@@ -66,6 +66,32 @@
     border-width: thin;
 }
 
-#detail{
+#visualisation{
+    float:left;
+    width:70%;
+}
+
+#sidebar{
     float:right;
+    width:30%;
+}
+
+#filter{
+    height:15%;
+}
+
+#detail--coauth-list{
+    width: 100%;
+    height: 15%;
+    overflow: scroll;
+}
+
+#detail--pub-list{
+    width: 100%;
+    height: 15%;
+    overflow: scroll;
+}
+
+#detail--coauth-list div:hover{
+    cursor:pointer;
 }
